bugfix: attribution was partially hidden by minimap

--- a/frontend/src/styles/Map.css
+++ b/frontend/src/styles/Map.css
@@ -45,3 +45,6 @@
 }
 
 .leaflet-bottom.leaflet-right { position: absolute; bottom: 4rem } 
+.leaflet-control-attribution {
+  position: absolute; top: 0.7rem;
+}
